[package]
name = "const-cstr"
version = "0.2.2"
authors = ["Austin Bonander <austin.bonander@gmail.com>", "Raphael Cohn <raphael.cohn@stormmq.com"]
description = "Create static C-compatible strings from Rust string literals."
license = "MIT OR Apache-2.0"
repository = "https://github.com/abonander/const-cstr"

[dependencies]
libc = "^0.2"
